Correct descriptions now appear when clicked on corresponding carousel-item.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,14 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   padding: 1rem;
   border-radius: 0;
 }
+
+.lead{
+    display: block;
+}
+.hideLead{
+    display: none;
+}
+
 .padding {
   padding-bottom: 2rem;
 }
